# streamlit-sample-ohtani-san

./: .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose-local.yml  pyproject.toml
.github/workflows/: ci.yml
dataset/: predict_shohei_ohtani_features03_app_dataset.csv
entities/: __init__.py  form.py
interfaces/ml/: __init__.py  model.py
interfaces/view/: label.py
model/: ohtani_hr_model_app.joblib
tests/: conftest.py
tests/usecase/: test_bat.py
usecase/: bat.py
